# python_modules_42

PM00/ex0/: ft_hello_garden.py
PM00/ex1/: ft_plot_area.py
PM00/ex2/: ft_harvest_total.py
PM00/ex3/: ft_plant_age.py
PM00/ex4/: ft_water_reminder.py
PM00/ex5/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
PM00/ex6/: ft_garden_summary.py
PM00/ex7/: ft_seed_inventory.py
PM01/: ft_garden_analytics.py
PM01/ex0/: ft_garden_intro.py
PM01/ex1/: ft_garden_data.py
PM01/ex2/: ft_plant_growth.py
PM01/ex3/: ft_plant_factory.py
PM01/ex4/: ft_plant_security.py
PM01/ex5/: ft_plant_types.py
PM02/ex0/: ft_first_exception.py
PM02/ex1/: ft_different_errors.py
PM02/ex2/: ft_custom_errors.py
PM02/ex3/: ft_finally_block.py
PM02/ex4/: ft_raise_errors.py
PM02/ex5/: ft_garden_management.py
PM03/ex0/: ft_command_quest.py
PM03/ex1/: ft_score_analytics.py
PM03/ex2/: ft_coordinate_system.py
PM03/ex3/: ft_achievement_tracker.py
PM03/ex4/: ft_inventory_system.py
PM03/ex5/: ft_data_stream.py
PM03/ex6/: ft_analytics_dashboard.py
PM04/ex0/: ft_ancient_text.py
PM04/ex1/: ft_archive_creation.py
PM04/ex2/: ft_stream_management.py
PM04/ex3/: ft_vault_security.py
PM04/ex4/: ft_crisis_response.py
PM05/ex0/: stream_processor.py
PM05/ex1/: data_stream.py
PM05/ex2/: nexus_pipeline.py
PM06/: .gitignore  ft_circular_curse.py  ft_sacred_scroll.py
PM07/ex0/: main.py
PM07/ex3/: main.py  (+2 more)
PM08/: .gitignore
PM_06/: ft_import_transmutation.py  ft_pathway_debate.py
PM_07/: .gitignore
PM_08/ex1/: pyproject.toml  requirements.txt
(+36 files in other folders)
