[project]
name = "matrix"
version = "0.1.0"
description = "ex1 matix constructer"
authors = [
    {name = "lpaiva",email = "lpaiva@student.42porto.com"}
]
requires-python = ">=3.10.12,<3.13"
dependencies = [
   
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
